[package]
name = "pin_array"
version = "0.1.1"
edition = "2021"
authors = ["Natasha England-Elbro"]
license = "MIT"
description = "Tiny crate providing an array with structurally projected pinning"
readme = "README.md"
repository = "https://github.com/0x00002a/pin_array"
keywords = ["collection", "pin", "pinning", "array", "no-std"]
categories = ["data-structures", "rust-patterns", "no-std::no-alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
static_assertions = "1.1.0"

